# OpenSnApp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: nightly.yaml  regression.yaml
ROM/: CMakeLists.txt  README.md
ROM/examples/: README.md
ROM/examples/1dk/: H2O_mg_base.txt  P58_problem.py  README.md  URRb_base.txt  base_P58.py  run_rom_P58.py
ROM/examples/2gcheckerboard/: README.md  checkerboard_problem_2g.py
ROM/examples/checkerboard/: README.md  checkerboard_problem.py  run_rom_checkerboard.py
ROM/examples/reed/: README.md  base_reed.py  reed_problem.py  run_rom_reed.py
ROM/python/: README.md  plotting.py  rom_driver.py  utils.py  xs.py
ROM/src/: README.md  main.cc  rom.cc
ROM/src/rom/: README.md  pi_keigen_rom_solver.cc  pi_keigen_rom_solver.h  rom_problem.cc  rom_problem.h  rom_structs.h  steady_state_rom_solver.cc  steady_state_rom_solver.h
diffusion/: CMakeLists.txt
diffusion/src/: diff_py_app.cc  diff_py_app.h  diffusion.cc  main.cc  py_wrappers.h
diffusion/src/cxxopts/: cxxopts.h
diffusion/src/diffusion/: cfem_diffusion_solver.cc  cfem_diffusion_solver.h  dfem_diffusion_solver.cc  dfem_diffusion_solver.h  diffusion_solver.cc  diffusion_solver.h
diffusion/test/: run_tests
diffusion/test/diffusion/cfem_diffusion/: c_diffusion_2d_1a_linear.py  c_diffusion_2d_2a_dir_bcs.py  c_diffusion_2d_2b_robin_bcs.py  c_diffusion_2d_3a_analytical_coef.py  c_diffusion_2d_3b_analytical_coef2.py  tests.json
diffusion/test/diffusion/dfem_diffusion/: d_diffusion_2d_1a_linear.py  d_diffusion_2d_2a_dir_bcs.py  d_diffusion_2d_2b_robin_bcs.py  d_diffusion_2d_3a_analytical_coef.py  d_diffusion_2d_3b_analytical_coef2.py  tests.json
examples/1dk/: base_1dk.py  fissile_base.txt  run_rom_1dk.py  scatterer_base.txt
examples/2gcheckerboard/: absorber_base.txt  base_2gcheckerboard.py  checkerboard_problem_2g.py  run_rom_2gcheckerboard.py
examples/checkerboard/: base_checkerboard.py  run_rom_checkerboard.py
examples/python/: active_subspace.py  plotting.py  utils.py
examples/reed/: base_reed.py  run_rom_reed.py
python/: job_manager.py  plotting.py  rom_driver.py  utils.py
src/: main.cc  py_wrappers.h  rom.cc  rom_py_app.cc  rom_py_app.h  test.cc  test.h  testapp_py.cc
src/rom/: ROM_problem.cc  ROM_problem.h  ROM_structs.h  pi_keigen_rom_solver.cc  pi_keigen_rom_solver.h  rom_problem.cc  rom_problem.h  steady_state_rom_solver.cc  steady_state_rom_solver.h
tests/: test.py
